--- a/package.json
+++ b/package.json
@@ -9,18 +9,33 @@
   "dependencies": {
     "@dnd-kit/core": "^6.2.0",
     "@dnd-kit/sortable": "^9.0.0",
+    "@iconify/react": "^5.0.2",
+    "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
     "@reduxjs/toolkit": "^2.2.0",
+    "@types/lodash": "^4.17.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "jodit": "^4.2.43",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.460.0",
     "next": "latest",
+    "next-themes": "^0.4.3",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "20.2.5",
